--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "mongodb": "^6.3.0"
   },
   "bugs": {
